The part of the JS logic was moved from customSelectors lib to the Layout JS file

--- a/Structured Cabling Studio/Views/Shared/_SignInWithGooglePartial.cshtml.css
+++ b/Structured Cabling Studio/Views/Shared/_SignInWithGooglePartial.cshtml.css
@@ -1,14 +1,14 @@
-﻿.signinDisplay {
+﻿#signInDisplayDiv {
     max-width: 170px;
 }
 
-.loginDisplay {
+#loginDisplayDiv {
     max-width: 260px;
     padding-top: 1.5px;
     line-height: normal;
 }
 
-.btnLogout {
+#logoutButton {
     padding: 1px;
     margin-top: 3px;
 }
