--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -305,7 +305,7 @@
 	<div class="mb-3">
 		<div class="row">
 			<div class="col-auto">
-				<button class="btn btn-outline-secondary my-1 my-sm-0">
+				<button class="btn btn-outline-secondary mt-1 mb-2 mt-sm-0 mb-sm-0">
 					@Localizer["Save to TXT"]
 				</button>
 			</div>
