--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
 
 	<div class="container-fluid d-flex ps-0">
 
-		<nav id="verticalSiteNav" class="verticalSiteContent navbar navbar-expand-lg align-items-start p-0">
+		<nav id="verticalSiteNav" class="navbar navbar-expand-lg align-items-start p-0">
 			<div id="verticalSiteNavbarDiv" class="navbar-collapse collapse">
 				<ul class="navbar-nav flex-column">
 					<li class="verticalSiteNavbarLi nav-item p-1 px-3">
@@ -91,7 +91,6 @@
 
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="~/js/site.js" asp-append-version="true"></script>
 	<script src="~/js/customSelectors.js" asp-append-version="true"></script>
 	<script src="~/js/_SignInWithGooglePartial.js" asp-append-version="true"></script>
 	<script src="~/js/_Layout.js" asp-append-version="true"></script>
