--- a/Structured Cabling Studio/Views/Shared/_SignInWithGooglePartial.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_SignInWithGooglePartial.cshtml
@@ -5,18 +5,18 @@
 <div class="text-center">
 	@if (User.Identity!.IsAuthenticated)
 	{
-		<div class="loginDisplay nav-link pb-1">
+		<div id="loginDisplayDiv" class="nav-link pb-1">
 			<a asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.History)" class="text-white text-decoration-none">
 				<div class="fw-semibold">
 					@Localizer["Hello"]<span class="d-none d-sm-inline">,</span><span class="d-inline d-sm-none">!</span>
 				</div>
-				<div class="d-none d-sm-block eMailNavDisplay text-decoration-underline ">
+				<div id="eMailNavDisplayDiv" class="d-none d-sm-block text-decoration-underline ">
 					@User.Identity.Name
 				</div>
 			</a>
 			<form asp-controller="@nameof(Account)" asp-action="@nameof(Account.Logout)" method="post">
 				<input type="hidden" name="returnUrl" value="@returnUrl">
-				<button type="submit" class="navLinkText btn btn-sm btn-outline-light btnLogout">
+				<button id="logoutButton" type="submit" class="navLinkText btn btn-sm btn-outline-light">
 					@Localizer["LogOut"]
 				</button>
 			</form>
@@ -24,7 +24,7 @@
 	}
 	else
 	{
-		<div class="signinDisplay">
+		<div id="signInDisplayDiv">
 			<form id="signInWithGoogleForm" asp-controller="@nameof(Account)" asp-action="@nameof(Account.SignInWithGoogle)" method="post">
 				<input type="hidden" name="returnUrl" value="@returnUrl">
 			</form>
