--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -6,7 +6,7 @@
 	Model.ApprovedRestoreDefaults = Empty;
 }
 
-<form asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.Calculate)" method="post">
+<form id="calculateForm" asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.Calculate)" method="post">
 
 	<div class="mb-3">
 		<div class="row">
@@ -118,8 +118,8 @@
 		<div class="row">
 			<div class="col">
 				<div class="form-check">
-					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="strictComplianceWithTheStandartCheckBox" name="strictComplianceWithTheStandart">
-					<label class="form-check-label" for="strictComplianceWithTheStandartCheckBox">
+					<input class="form-check-input border-primary border-opacity-75" id="isStrictComplianceWithTheStandartCheckBox" asp-for="IsStrictComplianceWithTheStandart">
+					<label class="form-check-label" for="isStrictComplianceWithTheStandartCheckBox">
 						@Localizer["Strict compliance with the standart"]
 					</label>
 				</div>
@@ -128,8 +128,8 @@
 		<div class="row ms-1 mt-2">
 			<div class="col">
 				<div class="form-check">
-					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="arbitaryPortsCountPerWorkplaceCheckBox" name="arbitaryPortsCountPerWorkplace">
-					<label class="form-check-label" for="arbitaryPortsCountPerWorkplaceCheckBox">
+					<input class="form-check-input border-primary border-opacity-75" id="isAnArbitraryNumberOfPortsCheckBox" asp-for="IsAnArbitraryNumberOfPortsCheckBox">
+					<label class="form-check-label" for="isAnArbitraryNumberOfPortsCheckBox">
 						@Localizer["Arbitary ports count per workplace"]
 					</label>
 				</div>
