Work on the Calculate page logic is ongoing

--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -198,8 +198,8 @@
 				<div class="row ms-1 mt-2">
 					<div class="col">
 						<div class="form-check">
-							<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="isCableRouteRunOutdoorsCheckBox" name="isCableRouteRunOutdoors">
-							<label class="form-check-label" for="isCableRouteRunOutdoorsCheckBox">
+							<input class="form-check-input border-primary border-opacity-75" asp-for="IsCableRouteRunOutdoors">
+							<label class="form-check-label" asp-for="IsCableRouteRunOutdoors">
 								@Localizer["Will the sections of the cable route run outdoors"]
 							</label>
 						</div>
@@ -208,8 +208,8 @@
 				<div class="row ms-1 mt-2">
 					<div class="col">
 						<div class="form-check">
-							<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="considerFireSafetyRequirementsCheckBox" name="сonsiderFireSafetyRequirements">
-							<label class="form-check-label" for="considerFireSafetyRequirementsCheckBox">
+							<input class="form-check-input border-primary border-opacity-75" asp-for="IsConsiderFireSafetyRequirements">
+							<label class="form-check-label" asp-for="IsConsiderFireSafetyRequirements">
 								@Localizer["Consider standard fire safety requirements"]
 							</label>
 						</div>
@@ -218,8 +218,8 @@
 				<div class="row ms-1 mt-2">
 					<div class="col">
 						<div class="form-check">
-							<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="cableShieldingNecessityCheckBox" name="cableShieldingNecessity">
-							<label class="form-check-label" for="cableShieldingNecessityCheckBox">
+							<input class="form-check-input border-primary border-opacity-75" asp-for="IsCableShieldingNecessity">
+							<label class="form-check-label" asp-for="IsCableShieldingNecessity">
 								@Localizer["Take into account the necessity of cable shielding"]
 							</label>
 						</div>
@@ -308,8 +308,8 @@
 				<div class="row ms-1 mt-2">
 					<div class="col">
 						<div class="form-check">
-							<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="isCableRouteRunOutdoorsCheckBox" name="isCableRouteRunOutdoors" disabled>
-							<label class="form-check-label" for="isCableRouteRunOutdoorsCheckBox">
+							<input class="form-check-input border-primary border-opacity-75" asp-for="IsCableRouteRunOutdoors" disabled>
+							<label class="form-check-label" asp-for="IsCableRouteRunOutdoors">
 								@Localizer["Will the sections of the cable route run outdoors"]
 							</label>
 						</div>
@@ -318,8 +318,8 @@
 				<div class="row ms-1 mt-2">
 					<div class="col">
 						<div class="form-check">
-							<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="considerFireSafetyRequirementsCheckBox" name="сonsiderFireSafetyRequirements" disabled>
-							<label class="form-check-label" for="considerFireSafetyRequirementsCheckBox">
+							<input class="form-check-input border-primary border-opacity-75" asp-for="IsConsiderFireSafetyRequirements" disabled>
+							<label class="form-check-label" asp-for="IsConsiderFireSafetyRequirements">
 								@Localizer["Consider standard fire safety requirements"]
 							</label>
 						</div>
@@ -328,8 +328,8 @@
 				<div class="row ms-1 mt-2">
 					<div class="col">
 						<div class="form-check">
-							<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="cableShieldingNecessityCheckBox" name="cableShieldingNecessity" disabled>
-							<label class="form-check-label" for="cableShieldingNecessityCheckBox">
+							<input class="form-check-input border-primary border-opacity-75" asp-for="IsCableShieldingNecessity" disabled>
+							<label class="form-check-label" asp-for="IsCableShieldingNecessity">
 								@Localizer["Take into account the necessity of cable shielding"]
 							</label>
 						</div>
